<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailsActivity"
    tools:showIn="@layout/activity_details">


    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_view_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@color/grey_400" />

    </com.facebook.shimmer.ShimmerFrameLayout>

    <RelativeLayout
        android:id="@+id/play"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_below="@+id/shimmer_view_container"
        android:background="@color/black"
        android:clickable="true"
        android:focusable="true">


        <FrameLayout
            android:id="@+id/player_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.exoplayer2.ui.PlayerView
                android:id="@+id/video_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <com.google.android.exoplayer2.ui.SubtitleView
                android:id="@+id/subtitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/img_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="42dp"
                app:srcCompat="@drawable/ic_subtitle" />

        </FrameLayout>

        <WebView
            android:id="@+id/webView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/img_full_scr"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="35dp"
            app:srcCompat="@drawable/ic_full" />

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            app:srcCompat="@drawable/ic_action_back_arrow" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_outline_play_circle_filled_24px"
            android:visibility="gone" />


    </RelativeLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/play">

        <androidx.core.widget.NestedScrollView

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <LinearLayout
                    android:id="@+id/llbottomparent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_server_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:nestedScrollingEnabled="false">

                    </androidx.recyclerview.widget.RecyclerView>


                    <LinearLayout
                        android:id="@+id/download_text"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:background="@color/colorPrimary"
                        android:orientation="vertical"
                        android:visibility="gone">


                        <TextView

                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="4dp"
                            android:text="Download Links:"
                            android:textColor="@android:color/white"

                            android:textSize="15dp" />

                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_download_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:nestedScrollingEnabled="false">

                    </androidx.recyclerview.widget.RecyclerView>


                    <RelativeLayout
                        android:id="@+id/adView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/text_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toStartOf="@+id/add_fav"
                            android:layout_toLeftOf="@+id/add_fav"
                            android:textAppearance="@style/TextAppearance.Title" />

                        <ImageView
                            android:id="@+id/add_fav"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_marginStart="5dp"
                            android:layout_marginLeft="10dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:visibility="gone"
                            app:srcCompat="@drawable/outline_favorite_border_24" />

                    </RelativeLayout>

                    <LinearLayout
                        android:id="@+id/llbottom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp">

                            <TextView
                                android:id="@+id/director"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/director"
                                android:textAppearance="@style/TextAppearance.Medium.Bold"
                                android:textColor="@color/black" />

                            <TextView
                                android:id="@+id/tv_director"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_marginLeft="10dp"
                                android:layout_toEndOf="@id/director"
                                android:layout_toRightOf="@id/director"
                                android:textAppearance="@style/TextAppearance.Medium.Bold" />

                            <androidx.recyclerview.widget.RecyclerView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_toEndOf="@id/director"
                                android:layout_toRightOf="@id/director"
                                android:visibility="gone">

                            </androidx.recyclerview.widget.RecyclerView>

                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp">

                            <TextView
                                android:id="@+id/tv_release_date"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="@style/TextAppearance.Medium.Bold" />

                        </RelativeLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="5dp"
                            android:background="@color/grey_20" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/genre"
                                android:textAppearance="@style/TextAppearance.Medium.Bold"
                                android:textColor="@color/black" />

                            <TextView
                                android:id="@+id/tv_genre"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAppearance="@style/TextAppearance.Small" />


                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="5dp"
                            android:background="@color/grey_20" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/cast_n_crew"
                                android:textAppearance="@style/TextAppearance.Medium.Bold"
                                android:textColor="@color/black" />

                            <TextView
                                android:id="@+id/tv_cast"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAppearance="@style/TextAppearance.Small" />
                        </LinearLayout>


                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="5dp"
                        android:background="@color/grey_20" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/description"
                            android:textAppearance="@style/TextAppearance.Medium.Bold"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/tv_details"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.Small" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_related"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/related_movie"
                        android:textAppearance="@style/TextAppearance.Title" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_related"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp">

                    </androidx.recyclerview.widget.RecyclerView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llcomments"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/comments"
                        android:textAppearance="@style/TextAppearance.Medium.Bold" />

                    <EditText
                        android:id="@+id/et_comment"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/comment_et_border"
                        android:hint="@string/your_comments"
                        android:padding="10dp" />

                    <Button
                        android:id="@+id/btn_comment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:text="@string/add_comments"
                        android:textAllCaps="false"
                        android:textColor="@color/colorPrimary" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView_comment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    </androidx.recyclerview.widget.RecyclerView>

                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


</RelativeLayout>